@@ -29,6 +29,7 @@ import jakarta.persistence.criteria.Root;
 import lombok.RequiredArgsConstructor;
 import org.apache.poi.ss.usermodel.*;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
 import org.springframework.data.domain.Page;
@@ -50,9 +51,11 @@ import java.text.SimpleDateFormat;
 import java.time.LocalDate;
 import java.time.ZoneId;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static com.hcmus.mentor.backend.controller.payload.returnCode.AnalyticReturnCode.*;
 import static com.hcmus.mentor.backend.controller.payload.returnCode.InvalidPermissionCode.INVALID_PERMISSION;
+import static com.hcmus.mentor.backend.controller.payload.returnCode.InvalidPermissionCode.INVALID_PERMISSION_STRING;
 import static com.hcmus.mentor.backend.controller.payload.returnCode.SuccessCode.SUCCESS;
 
 /**
@@ -78,10 +81,7 @@ public class AnalyticServiceImpl implements AnalyticService {
         long activeGroups = groupRepository.countByStatus(GroupStatus.ACTIVE);
 
         List<Task> tasks = taskRepository.findAll();
-        long totalTasks = 0;
-        for (Task task : tasks) {
-            totalTasks += task.getAssignees().size();
-        }
+        long totalTasks = tasks.stream().map(task -> task.getAssignees().size()).reduce(0, Integer::sum);
 
         long totalMeetings = meetingRepository.count();
         long totalMessages = messageRepository.count();
@@ -101,19 +101,15 @@ public class AnalyticServiceImpl implements AnalyticService {
     }
 
     private SystemAnalyticResponse getGeneralInformationForAdmin(String adminId) {
-        long activeGroups = groupRepository.countByStatusAndCreatorId(GroupStatus.ACTIVE, adminId);
         List<Group> groups = groupRepository.findAllByCreatorId(adminId);
+        var channelIds = groups.stream().flatMap(g -> g.getChannels().stream().map(Channel::getId)).toList();
+        List<Task> tasks = taskRepository.findAllByGroupIdIn(channelIds);
+        long totalTasks = tasks.stream().map(task -> task.getAssignees().size()).reduce(0, Integer::sum);
+
+        long activeGroups = groupRepository.countByStatusAndCreatorId(GroupStatus.ACTIVE, adminId);
         long totalGroups = groups.size();
-
-        List<String> groupIds = groups.stream().map(Group::getId).toList();
-
-        List<Task> tasks = taskRepository.findAllByGroupIdIn(groupIds);
-        long totalTasks =
-                tasks.stream().map(task -> task.getAssignees().size()).reduce(0, Integer::sum);
-
-        long totalMeetings = meetingRepository.countByGroupIdIn(groupIds);
-        long totalMessages = messageRepository.countByGroupIdIn(groupIds);
-
+        long totalMeetings = meetingRepository.countByGroupIdIn(channelIds);
+        long totalMessages = messageRepository.countByGroupIdIn(channelIds);
         long totalUsers = userRepository.count();
         long activeUsers = userRepository.countByStatus(true);
 
@@ -131,27 +127,23 @@ public class AnalyticServiceImpl implements AnalyticService {
     @Override
     public ApiResponseDto<SystemAnalyticResponse> getGeneralInformation(String emailUser) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new ApiResponseDto(null, INVALID_PERMISSION, "Invalid permission");
+            return new ApiResponseDto<>(null, INVALID_PERMISSION, INVALID_PERMISSION_STRING);
         }
         SystemAnalyticResponse response;
         if (permissionService.isSuperAdmin(emailUser)) {
             response = getGeneralInformationForSuperAdmin();
         } else {
-            Optional<User> userOptional = userRepository.findByEmail(emailUser);
-            String adminId = null;
-            if (userOptional != null) {
-                adminId = userOptional.get().getId();
-            }
+            var adminId = Objects.requireNonNull(userRepository.findByEmail(emailUser).orElse(null)).getId();
             response = getGeneralInformationForAdmin(adminId);
         }
 
-        return new ApiResponseDto(response, SUCCESS, "");
+        return new ApiResponseDto<>(response, SUCCESS, "");
     }
 
     @Override
     public ApiResponseDto<SystemAnalyticResponse> getGeneralInformationByGroupCategory(String emailUser, String groupCategoryId) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new ApiResponseDto(null, INVALID_PERMISSION, "Invalid permission");
+            return new ApiResponseDto<>(null, INVALID_PERMISSION, INVALID_PERMISSION_STRING);
         }
         List<Group> groups;
         long activeGroups;
@@ -160,141 +152,112 @@ public class AnalyticServiceImpl implements AnalyticService {
             groups = groupRepository.findAllByGroupCategory(groupCategoryId);
             activeGroups = groupRepository.countByGroupCategoryAndStatus(groupCategoryId, GroupStatus.ACTIVE);
         } else {
-            var user = userRepository.findByEmail(emailUser).orElse(null);
-            String adminId = null;
-            if (user != null) {
-                adminId = user.getId();
-            }
+            var adminId = Objects.requireNonNull(userRepository.findByEmail(emailUser).orElse(null)).getId();
             groups = groupRepository.findAllByGroupCategoryAndCreatorId(groupCategoryId, adminId);
             activeGroups = groupRepository.countByGroupCategoryAndStatusAndCreatorId(groupCategoryId, GroupStatus.ACTIVE, adminId);
         }
 
+        var channelIds = groups.stream().flatMap(g -> g.getChannels().stream().map(Channel::getId)).toList();
+        List<Task> tasks = taskRepository.findAllByGroupIdIn(channelIds);
+
         long totalGroups = groups.size();
-        List<String> groupIds = groups.stream().map(Group::getId).toList();
-        List<Task> tasks = taskRepository.findAllByGroupIdIn(groupIds);
         long totalTasks = tasks.stream().map(task -> task.getAssignees().size()).reduce(0, Integer::sum);
+        long totalMeetings = meetingRepository.countByGroupIdIn(channelIds);
+        long totalMessages = messageRepository.countByGroupIdIn(channelIds);
+        long totalUsers = groups.stream().map(g -> g.getGroupUsers().size()).reduce(0, Integer::sum);
+        long activeUsers = groups.stream()
+                .map(g -> g.getGroupUsers().stream().filter(gu -> gu.getUser().isStatus()).count())
+                .reduce(0L, Long::sum);
 
-        long totalMeetings = meetingRepository.countByGroupIdIn(groupIds);
-        long totalMessages = messageRepository.countByGroupIdIn(groupIds);
-
-        Set<String> userIds = new HashSet<>();
-        groups.forEach(group -> {
-            userIds.addAll(group.getMentors().stream().map(User::getId).toList());
-            userIds.addAll(group.getMentees().stream().map(User::getId).toList());
-        });
-        long totalUsers = userIds.size();
-        long activeUsers = userRepository.countByIdInAndStatus(new ArrayList<>(userIds), true);
-
-        SystemAnalyticResponse response =
-                SystemAnalyticResponse.builder()
-                        .totalGroups(totalGroups)
-                        .activeGroups(activeGroups)
-                        .totalTasks(totalTasks)
-                        .totalMeetings(totalMeetings)
-                        .totalMessages(totalMessages)
-                        .totalUsers(totalUsers)
-                        .activeUsers(activeUsers)
-                        .build();
-        return new ApiResponseDto(response, SUCCESS, "");
+        SystemAnalyticResponse response = SystemAnalyticResponse.builder()
+                .totalGroups(totalGroups)
+                .activeGroups(activeGroups)
+                .totalTasks(totalTasks)
+                .totalMeetings(totalMeetings)
+                .totalMessages(totalMessages)
+                .totalUsers(totalUsers)
+                .activeUsers(activeUsers)
+                .build();
+        return new ApiResponseDto<>(response, SUCCESS, "");
     }
 
     @Override
-    public ApiResponseDto<SystemAnalyticChartResponse> getDataForChart(
-            String emailUser, int monthStart, int yearStart, int monthEnd, int yearEnd)
-            throws ParseException {
+    public ApiResponseDto<SystemAnalyticChartResponse> getDataForChart(String emailUser, int monthStart, int yearStart, int monthEnd, int yearEnd) throws ParseException {
         if (!permissionService.isAdmin(emailUser)) {
-            return new ApiResponseDto(null, INVALID_PERMISSION, "Invalid permission");
+            return new ApiResponseDto<>(null, INVALID_PERMISSION, INVALID_PERMISSION_STRING);
         }
         LocalDate timeStart = LocalDate.of(yearStart, monthStart, 1);
         int lastDay = getLastDayOfMonth(yearEnd, monthEnd);
         LocalDate timeEnd = LocalDate.of(yearEnd, monthEnd, lastDay);
         if (timeEnd.isBefore(timeStart)) {
-            return new ApiResponseDto(null, INVALID_TIME_RANGE, "Invalid time range");
+            return new ApiResponseDto<>(null, INVALID_TIME_RANGE, INVALID_TIME_RANGE_STRING);
         }
-        List<SystemAnalyticChartResponse.MonthSystemAnalytic> data = new ArrayList<>();
+        List<SystemAnalyticChartResponse.MonthSystemAnalytic> data;
         if (permissionService.isSuperAdmin(emailUser)) {
             data = getChartByMonthForSuperAdmin(timeStart, timeEnd);
         } else {
-            Optional<User> userOptional = userRepository.findByEmail(emailUser);
-            String adminId = null;
-            if (userOptional != null) {
-                adminId = userOptional.get().getId();
-            }
+            var adminId = Objects.requireNonNull(userRepository.findByEmail(emailUser).orElse(null)).getId();
             data = getChartByMonthForAdmin(timeStart, timeEnd, adminId);
         }
         SystemAnalyticChartResponse response = SystemAnalyticChartResponse.builder().data(data).build();
-        return new ApiResponseDto(response, SUCCESS, "");
+        return new ApiResponseDto<>(response, SUCCESS, "");
     }
 
-    private List<SystemAnalyticChartResponse.MonthSystemAnalytic> getChartByMonthForSuperAdmin(
-            LocalDate timeStart, LocalDate timeEnd) {
+    private List<SystemAnalyticChartResponse.MonthSystemAnalytic> getChartByMonthForSuperAdmin(LocalDate timeStart, LocalDate timeEnd) {
         List<SystemAnalyticChartResponse.MonthSystemAnalytic> data = new ArrayList<>();
         for (LocalDate localDate = timeStart;
              localDate.isBefore(timeEnd);
              localDate = localDate.plusMonths(1)) {
             Date date = Date.from(localDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
-            Date dateAfterOneMonth =
-                    Date.from(localDate.plusMonths(1).atStartOfDay(ZoneId.systemDefault()).toInstant());
+            Date dateAfterOneMonth = Date.from(localDate.plusMonths(1).atStartOfDay(ZoneId.systemDefault()).toInstant());
             long newGroups = groupRepository.countByCreatedDateBetween(date, dateAfterOneMonth);
             long newMessages = messageRepository.countByCreatedDateBetween(date, dateAfterOneMonth);
+
             List<Task> tasks = taskRepository.findByCreatedDateBetween(date, dateAfterOneMonth);
-            long newTasks = 0;
-            for (Task task : tasks) {
-                newTasks += task.getAssignees().size();
-            }
+
+            long newTasks = tasks.stream().map(task -> task.getAssignees().size()).reduce(0, Integer::sum);
             long newMeetings = meetingRepository.countByCreatedDateBetween(date, dateAfterOneMonth);
             long newUsers = userRepository.countByCreatedDateBetween(date, dateAfterOneMonth);
-            SystemAnalyticChartResponse.MonthSystemAnalytic monthSystemAnalytic =
-                    SystemAnalyticChartResponse.MonthSystemAnalytic.builder()
-                            .month(date.getMonth() + 1)
-                            .year(date.getYear() + 1900)
-                            .newGroups(newGroups)
-                            .newMessages(newMessages)
-                            .newTasks(newTasks)
-                            .newMeetings(newMeetings)
-                            .newUsers(newUsers)
-                            .build();
+
+            SystemAnalyticChartResponse.MonthSystemAnalytic monthSystemAnalytic = SystemAnalyticChartResponse.MonthSystemAnalytic.builder()
+                    .month(date.getMonth() + 1)
+                    .year(date.getYear() + 1900)
+                    .newGroups(newGroups)
+                    .newMessages(newMessages)
+                    .newTasks(newTasks)
+                    .newMeetings(newMeetings)
+                    .newUsers(newUsers)
+                    .build();
             data.add(monthSystemAnalytic);
         }
         return data;
     }
 
-    private List<SystemAnalyticChartResponse.MonthSystemAnalytic> getChartByMonthForAdmin(
-            LocalDate timeStart, LocalDate timeEnd, String adminId) {
+    private List<SystemAnalyticChartResponse.MonthSystemAnalytic> getChartByMonthForAdmin(LocalDate timeStart, LocalDate timeEnd, String adminId) {
         List<Group> groups = groupRepository.findAllByCreatorId(adminId);
-        List<String> groupIds = groups.stream().map(Group::getId).toList();
+        List<String> channelIds = groups.stream().flatMap(g -> g.getChannels().stream().map(Channel::getId)).toList();
         List<SystemAnalyticChartResponse.MonthSystemAnalytic> data = new ArrayList<>();
-        for (LocalDate localDate = timeStart;
-             localDate.isBefore(timeEnd);
-             localDate = localDate.plusMonths(1)) {
+        for (LocalDate localDate = timeStart; localDate.isBefore(timeEnd); localDate = localDate.plusMonths(1)) {
             Date date = Date.from(localDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
-            Date dateAfterOneMonth =
-                    Date.from(localDate.plusMonths(1).atStartOfDay(ZoneId.systemDefault()).toInstant());
-            long newGroups =
-                    groupRepository.countByCreatedDateBetweenAndCreatorId(date, dateAfterOneMonth, adminId);
-            long newMessages =
-                    messageRepository.countByGroupIdInAndCreatedDateBetween(
-                            groupIds, date, dateAfterOneMonth);
-            List<Task> tasks =
-                    taskRepository.findByGroupIdInAndCreatedDateBetween(groupIds, date, dateAfterOneMonth);
-            long newTasks = 0;
-            for (Task task : tasks) {
-                newTasks += task.getAssignees().size();
-            }
-            long newMeetings =
-                    meetingRepository.countByGroupIdInAndCreatedDateBetween(
-                            groupIds, date, dateAfterOneMonth);
+            Date dateAfterOneMonth = Date.from(localDate.plusMonths(1).atStartOfDay(ZoneId.systemDefault()).toInstant());
+
+            List<Task> tasks = taskRepository.findByGroupIdInAndCreatedDateBetween(channelIds, date, dateAfterOneMonth);
+
+            long newGroups = groupRepository.countByCreatedDateBetweenAndCreatorId(date, dateAfterOneMonth, adminId);
+            long newMessages = messageRepository.countByGroupIdInAndCreatedDateBetween(channelIds, date, dateAfterOneMonth);
+            long newTasks = tasks.stream().map(task -> task.getAssignees().size()).reduce(0, Integer::sum);
+            long newMeetings = meetingRepository.countByGroupIdInAndCreatedDateBetween(channelIds, date, dateAfterOneMonth);
             long newUsers = userRepository.countByCreatedDateBetween(date, dateAfterOneMonth);
-            SystemAnalyticChartResponse.MonthSystemAnalytic monthSystemAnalytic =
-                    SystemAnalyticChartResponse.MonthSystemAnalytic.builder()
-                            .month(date.getMonth() + 1)
-                            .year(date.getYear() + 1900)
-                            .newGroups(newGroups)
-                            .newMessages(newMessages)
-                            .newTasks(newTasks)
-                            .newMeetings(newMeetings)
-                            .newUsers(newUsers)
-                            .build();
+
+            SystemAnalyticChartResponse.MonthSystemAnalytic monthSystemAnalytic = SystemAnalyticChartResponse.MonthSystemAnalytic.builder()
+                    .month(date.getMonth() + 1)
+                    .year(date.getYear() + 1900)
+                    .newGroups(newGroups)
+                    .newMessages(newMessages)
+                    .newTasks(newTasks)
+                    .newMeetings(newMeetings)
+                    .newUsers(newUsers)
+                    .build();
             data.add(monthSystemAnalytic);
         }
         return data;
@@ -307,74 +270,55 @@ public class AnalyticServiceImpl implements AnalyticService {
             int yearStart,
             int monthEnd,
             int yearEnd,
-            String groupCategoryId)
-            throws ParseException {
+            String groupCategoryId) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new ApiResponseDto(null, INVALID_PERMISSION, "Invalid permission");
+            return new ApiResponseDto<>(null, INVALID_PERMISSION, INVALID_PERMISSION_STRING);
         }
         LocalDate timeStart = LocalDate.of(yearStart, monthStart, 1);
         int lastDay = getLastDayOfMonth(yearEnd, monthEnd);
         LocalDate timeEnd = LocalDate.of(yearEnd, monthEnd, lastDay);
         if (timeEnd.isBefore(timeStart)) {
-            return new ApiResponseDto(null, INVALID_TIME_RANGE, "Invalid time range");
+            return new ApiResponseDto<>(null, INVALID_TIME_RANGE, INVALID_TIME_RANGE_STRING);
         }
         ArrayList<SystemAnalyticChartResponse.MonthSystemAnalytic> data = new ArrayList<>();
         List<Group> groups;
         if (permissionService.isSuperAdmin(emailUser)) {
             groups = groupRepository.findAllByGroupCategory(groupCategoryId);
         } else {
-            Optional<User> userOptional = userRepository.findByEmail(emailUser);
-            String adminId = null;
-            if (userOptional != null) {
-                adminId = userOptional.get().getId();
-            }
+            var adminId = Objects.requireNonNull(userRepository.findByEmail(emailUser).orElse(null)).getId();
             groups = groupRepository.findAllByCreatorId(adminId);
         }
-        List<String> groupIds = groups.stream().map(Group::getId).toList();
-        Set<String> userIds = new HashSet<>();
-        groups.forEach(
-                group -> {
-                    userIds.addAll(group.getMentors().stream().map(User::getId).toList());
-                    userIds.addAll(group.getMentees().stream().map(User::getId).toList());
-                });
+        var channels = groups.stream().flatMap(g -> g.getChannels().stream()).toList();
+        var channelIds = channels.stream().map(Channel::getId).collect(Collectors.toList());
+        Set<User> users = groups.stream().flatMap(g -> g.getGroupUsers().stream().map(GroupUser::getUser)).collect(Collectors.toSet());
+
         for (LocalDate localDate = timeStart;
              localDate.isBefore(timeEnd);
              localDate = localDate.plusMonths(1)) {
             Date date = Date.from(localDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
-            Date dateAfterOneMonth =
-                    Date.from(localDate.plusMonths(1).atStartOfDay(ZoneId.systemDefault()).toInstant());
-            long newGroups =
-                    groupRepository.countByGroupCategoryAndCreatedDateBetween(
-                            groupCategoryId, date, dateAfterOneMonth);
-            long newMessages =
-                    messageRepository.countByGroupIdInAndCreatedDateBetween(
-                            groupIds, date, dateAfterOneMonth);
-            List<Task> tasks =
-                    taskRepository.findByGroupIdInAndCreatedDateBetween(groupIds, date, dateAfterOneMonth);
-            long newTasks = 0;
-            for (Task task : tasks) {
-                newTasks += task.getAssignees().size();
-            }
-            long newMeetings =
-                    meetingRepository.countByGroupIdInAndCreatedDateBetween(
-                            groupIds, date, dateAfterOneMonth);
-            long newUsers =
-                    userRepository.countByIdInAndCreatedDateBetween(
-                            new ArrayList<>(userIds), date, dateAfterOneMonth);
-            SystemAnalyticChartResponse.MonthSystemAnalytic monthSystemAnalytic =
-                    SystemAnalyticChartResponse.MonthSystemAnalytic.builder()
-                            .month(date.getMonth() + 1)
-                            .year(date.getYear() + 1900)
-                            .newGroups(newGroups)
-                            .newMessages(newMessages)
-                            .newTasks(newTasks)
-                            .newMeetings(newMeetings)
-                            .newUsers(newUsers)
-                            .build();
+            Date dateAfterOneMonth = Date.from(localDate.plusMonths(1).atStartOfDay(ZoneId.systemDefault()).toInstant());
+
+            List<Task> tasks = taskRepository.findByGroupIdInAndCreatedDateBetween(channelIds, date, dateAfterOneMonth);
+
+            long newGroups = groupRepository.countByGroupCategoryAndCreatedDateBetween(groupCategoryId, date, dateAfterOneMonth);
+            long newMessages = messageRepository.countByGroupIdInAndCreatedDateBetween(channelIds, date, dateAfterOneMonth);
+            long newTasks = tasks.stream().map(task -> task.getAssignees().size()).reduce(0, Integer::sum);
+            long newMeetings = meetingRepository.countByGroupIdInAndCreatedDateBetween(channelIds, date, dateAfterOneMonth);
+            long newUsers = users.stream().filter(user -> user.getCreatedDate().after(date) && user.getCreatedDate().before(dateAfterOneMonth)).count();
+
+            SystemAnalyticChartResponse.MonthSystemAnalytic monthSystemAnalytic = SystemAnalyticChartResponse.MonthSystemAnalytic.builder()
+                    .month(date.getMonth() + 1)
+                    .year(date.getYear() + 1900)
+                    .newGroups(newGroups)
+                    .newMessages(newMessages)
+                    .newTasks(newTasks)
+                    .newMeetings(newMeetings)
+                    .newUsers(newUsers)
+                    .build();
             data.add(monthSystemAnalytic);
         }
         SystemAnalyticChartResponse response = SystemAnalyticChartResponse.builder().data(data).build();
-        return new ApiResponseDto(response, SUCCESS, "");
+        return new ApiResponseDto<>(response, SUCCESS, "");
     }
 
     private int getLastDayOfMonth(int year, int month) {
@@ -388,7 +332,7 @@ public class AnalyticServiceImpl implements AnalyticService {
     @Override
     public ApiResponseDto<GroupAnalyticResponse> getGroupAnalytic(String emailUser, String groupId) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new ApiResponseDto(null, INVALID_PERMISSION, "Invalid permission");
+            return new ApiResponseDto(null, INVALID_PERMISSION, INVALID_PERMISSION_STRING);
         }
         Optional<Group> groupOptional = groupRepository.findById(groupId);
         if (!groupOptional.isPresent()) {
@@ -471,19 +415,17 @@ public class AnalyticServiceImpl implements AnalyticService {
     }
 
     @Override
-    public ResponseEntity<Resource> generateExportGroupTable(
-            List<GroupAnalyticResponse.Member> members, List<String> remainColumns) throws IOException {
+    public ResponseEntity<Resource> generateExportGroupTable(List<GroupAnalyticResponse.Member> members, List<String> remainColumns) throws IOException {
         List<List<String>> data = generateExportGroupData(members);
-        List<String> headers =
-                Arrays.asList(
-                        "STT",
-                        "Email",
-                        "Họ tên",
-                        "Vai trò",
-                        "Số tin nhắn",
-                        "Số công việc",
-                        "Số cuộc hẹn tham gia",
-                        "Lần hoạt động gần nhất");
+        List<String> headers = Arrays.asList(
+                "STT",
+                "Email",
+                "Họ tên",
+                "Vai trò",
+                "Số tin nhắn",
+                "Số công việc",
+                "Số cuộc hẹn tham gia",
+                "Lần hoạt động gần nhất");
         String fileName = "output.xlsx";
         Map<String, Integer> indexMap = new HashMap<>();
         indexMap.put("email", 1);
@@ -495,22 +437,18 @@ public class AnalyticServiceImpl implements AnalyticService {
         indexMap.put("lastTimeActive", 7);
         List<Integer> remainColumnIndexes = new ArrayList<>();
         remainColumnIndexes.add(0);
-        remainColumns.forEach(
-                remainColumn -> {
-                    if (indexMap.containsKey(remainColumn)) {
-                        remainColumnIndexes.add(indexMap.get(remainColumn));
-                    }
-                });
+        remainColumns.forEach(remainColumn -> {
+            if (indexMap.containsKey(remainColumn)) {
+                remainColumnIndexes.add(indexMap.get(remainColumn));
+            }
+        });
         java.io.File exportFile = FileUtils.generateExcel(headers, data, remainColumnIndexes, fileName);
         Resource resource = new FileSystemResource(exportFile.getAbsolutePath());
-        ResponseEntity<Resource> response =
-                ResponseEntity.ok()
-                        .header(
-                                HttpHeaders.CONTENT_DISPOSITION, "attachment;filename=" + resource.getFilename())
-                        .contentType(MediaType.parseMediaType("application/vnd.ms-excel"))
-                        .contentLength(resource.getFile().length())
-                        .body(resource);
-        return response;
+        return ResponseEntity.ok()
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment;filename=" + resource.getFilename())
+                .contentType(MediaType.parseMediaType("application/vnd.ms-excel"))
+                .contentLength(resource.getFile().length())
+                .body(resource);
     }
 
     @Override
@@ -519,8 +457,7 @@ public class AnalyticServiceImpl implements AnalyticService {
         Optional<Group> groupOptional = groupRepository.findById(groupId);
         Group group = groupOptional.orElse(null);
         List<GroupAnalyticResponse.Member> members = getMembers(group);
-        ResponseEntity<Resource> response = generateExportGroupTable(members, remainColumns);
-        return response;
+        return generateExportGroupTable(members, remainColumns);
     }
 
     @Override
@@ -529,8 +466,7 @@ public class AnalyticServiceImpl implements AnalyticService {
             throws IOException {
         List<GroupAnalyticResponse.Member> members =
                 getUsersAnalyticBySearchConditions(emailUser, groupId, request);
-        ResponseEntity<Resource> response = generateExportGroupTable(members, remainColumns);
-        return response;
+        return generateExportGroupTable(members, remainColumns);
     }
 
     private void addMembersToAnalytics(
@@ -545,37 +481,24 @@ public class AnalyticServiceImpl implements AnalyticService {
             }
 
             long totalMessagesMember = messageRepository.countByGroupIdAndSenderId(groupId, memberId);
-            long totalMeetingsMember =
-                    meetingRepository.countByGroupIdAndAttendeesIn(groupId, memberId)
-                            + meetingRepository.countByGroupIdAndOrganizerId(groupId, memberId);
+            long totalMeetingsMember = meetingRepository.countByGroupIdAndAttendeesIn(groupId, memberId)
+                    + meetingRepository.countByGroupIdAndOrganizerId(groupId, memberId);
 
-            long totalTasksMember =
-                    taskRepository.countByGroupIdAndAssigneeIdsUserIdIn(groupId, memberId);
-            long totalDoneTasks =
-                    taskRepository.countByGroupIdAndAssigneeIdsUserIdInAndAssigneeIdsStatusIn(
-                            groupId, memberId, TaskStatus.DONE);
+            long totalTasksMember = taskRepository.countByGroupIdAndAssigneeIdsUserIdIn(groupId, memberId);
+            long totalDoneTasks = taskRepository.countByGroupIdAndAssigneeIdsUserIdInAndAssigneeIdsStatusIn(groupId, memberId, TaskStatus.DONE);
 
-            Date lastTimeTaskMember =
-                    Optional.ofNullable(
-                                    taskRepository.findFirstByGroupIdAndAssigneeIdsUserIdInOrderByCreatedDateDesc(
-                                            groupId, memberId))
-                            .map(Task::getCreatedDate)
-                            .orElse(null);
+            Date lastTimeTaskMember = Optional.ofNullable(taskRepository.findFirstByGroupIdAndAssigneeIdsUserIdInOrderByCreatedDateDesc(groupId, memberId))
+                    .map(Task::getCreatedDate)
+                    .orElse(null);
 
-            Date lastTimeMessageMember =
-                    Optional.ofNullable(
-                                    messageRepository.findFirstByGroupIdAndSenderIdOrderByCreatedDateDesc(
-                                            groupId, memberId))
-                            .map(Message::getCreatedDate)
-                            .orElse(null);
-            Date lastTimeMeetingMember =
-                    Optional.ofNullable(
-                                    meetingRepository.findFirstByGroupIdAndOrganizerIdOrderByCreatedDateDesc(
-                                            groupId, memberId))
-                            .map(Meeting::getCreatedDate)
-                            .orElse(null);
-            Date lastTimeActiveMember =
-                    getLatestDate(lastTimeMessageMember, lastTimeTaskMember, lastTimeMeetingMember);
+            Date lastTimeMessageMember = Optional.ofNullable(messageRepository.findFirstByGroupIdAndSenderIdOrderByCreatedDateDesc(groupId, memberId))
+                    .map(Message::getCreatedDate)
+                    .orElse(null);
+            Date lastTimeMeetingMember = Optional.ofNullable(
+                            meetingRepository.findFirstByGroupIdAndOrganizerIdOrderByCreatedDateDesc(groupId, memberId))
+                    .map(Meeting::getCreatedDate)
+                    .orElse(null);
+            Date lastTimeActiveMember = getLatestDate(lastTimeMessageMember, lastTimeTaskMember, lastTimeMeetingMember);
 
             GroupAnalyticResponse.Member member =
                     GroupAnalyticResponse.Member.builder()
@@ -642,28 +565,29 @@ public class AnalyticServiceImpl implements AnalyticService {
                 groupRepository.save(group);
             }
         }
-        String groupId = group.getId();
+        var channelIds = group.getChannels().stream().map(Channel::getId).toList();
         String categoryName = groupCategoryRepository
                 .findById(group.getGroupCategory().getId())
                 .map(GroupCategory::getName)
                 .orElse(null);
 
-        Date lastTimeActive = getLastTimeActive(groupId);
+        Date lastTimeActive = getLastTimeActive(group.getId());
 
-        long totalMessages = messageRepository.countByGroupId(groupId);
-        List<Task> tasks = taskRepository.findByGroupId(groupId);
+        long totalMessages = messageRepository.countByGroupIdIn(channelIds);
+        List<Task> tasks = taskRepository.findAllByGroupIdIn(channelIds);
         long totalTasks = getTotalTasks(tasks);
-        long totalMeetings = meetingRepository.countByGroupId(groupId);
+        long totalMeetings = meetingRepository.countByGroupIdIn(channelIds);
 
-        long totalDoneTasks =
-                taskRepository.countByGroupIdAndAssigneeIdsStatusIn(groupId, TaskStatus.DONE);
+        long totalDoneTasks = tasks.stream()
+                .map(t -> t.getAssignees().stream().filter(a -> a.getStatus().equals(TaskStatus.DONE)).count())
+                .reduce(0L, Long::sum);
 
         return GroupGeneralResponse.builder()
                 .id(group.getId())
                 .name(group.getName())
                 .category(categoryName)
-                .totalMentees(group.getMentees().size())
-                .totalMentors(group.getMentors().size())
+                .totalMentees(group.getGroupUsers().stream().filter(GroupUser::isMentor).count())
+                .totalMentors(group.getGroupUsers().stream().filter(gu -> !gu.isMentor()).count())
                 .lastTimeActive(lastTimeActive)
                 .totalMeetings(totalMeetings)
                 .totalTasks(totalTasks)
@@ -674,20 +598,16 @@ public class AnalyticServiceImpl implements AnalyticService {
     }
 
     @Override
-    public ApiResponseDto<Page<GroupGeneralResponse>> getGroupGeneralAnalytic(
+    public ApiResponseDto getGroupGeneralAnalytic(
             String emailUser, Pageable pageRequest) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new ApiResponseDto(null, INVALID_PERMISSION, "Invalid permission");
+            return new ApiResponseDto(null, INVALID_PERMISSION, INVALID_PERMISSION_STRING);
         }
         Page<Group> groups;
         if (permissionService.isSuperAdmin(emailUser)) {
             groups = groupRepository.findAll(pageRequest);
         } else {
-            Optional<User> userOptional = userRepository.findByEmail(emailUser);
-            String adminId = null;
-            if (userOptional != null) {
-                adminId = userOptional.get().getId();
-            }
+            var adminId = Objects.requireNonNull(userRepository.findByEmail(emailUser).orElse(null)).getId();
             groups = groupRepository.findAllByCreatorId(pageRequest, adminId);
         }
         List<GroupGeneralResponse> responses = getGroupGeneralAnalyticFromGroups(groups.toList());
@@ -697,7 +617,7 @@ public class AnalyticServiceImpl implements AnalyticService {
     }
 
     private List<GroupGeneralResponse> getAllGroupGeneralAnalytic(String emailUser) {
-        List<Group> groups = new ArrayList<>();
+        List<Group> groups;
         boolean isSuperAdmin = permissionService.isSuperAdmin(emailUser);
         if (isSuperAdmin) {
             groups = groupRepository.findAllByOrderByCreatedDate();
@@ -705,19 +625,17 @@ public class AnalyticServiceImpl implements AnalyticService {
             String creatorId = userRepository.findByEmail(emailUser).get().getId();
             groups = groupRepository.findAllByCreatorIdOrderByCreatedDate(creatorId);
         }
-        List<GroupGeneralResponse> responses = getGroupGeneralAnalyticFromGroups(groups);
-        return responses;
+        return getGroupGeneralAnalyticFromGroups(groups);
     }
 
-    private List<List<String>> generateExportDataAllGroupGeneralAnalytic(
-            List<GroupGeneralResponse> groups) {
+    private List<List<String>> generateExportDataAllGroupGeneralAnalytic(List<GroupGeneralResponse> groups) {
         List<List<String>> data = new ArrayList<>();
         int index = 1;
         for (GroupGeneralResponse group : groups) {
             List<String> row = new ArrayList<>();
 
-            Map statusMap = Group.getStatusMap();
-            String status = (String) statusMap.get(group.getStatus());
+            Map<GroupStatus, String> statusMap = Group.getStatusMap();
+            String status = statusMap.get(group.getStatus());
             SimpleDateFormat dateFormat = new SimpleDateFormat("dd/MM/yyyy");
             String lastTimeActive = "";
             if (group.getLastTimeActive() != null) {
@@ -744,18 +662,17 @@ public class AnalyticServiceImpl implements AnalyticService {
     private ResponseEntity<Resource> generateExportGroupsTable(
             List<GroupGeneralResponse> groups, List<String> remainColumns) throws IOException {
         List<List<String>> data = generateExportDataAllGroupGeneralAnalytic(groups);
-        List<String> headers =
-                Arrays.asList(
-                        "STT",
-                        "Tên nhóm",
-                        "Loại nhóm",
-                        "Trạng thái",
-                        "Tổng số mentor",
-                        "Tổng số mentee",
-                        "Tổng số tin nhắn",
-                        "Tổng số công việc",
-                        "Tổng số lịch hẹn",
-                        "Lần hoạt động gần nhất");
+        List<String> headers = Arrays.asList(
+                "STT",
+                "Tên nhóm",
+                "Loại nhóm",
+                "Trạng thái",
+                "Tổng số mentor",
+                "Tổng số mentee",
+                "Tổng số tin nhắn",
+                "Tổng số công việc",
+                "Tổng số lịch hẹn",
+                "Lần hoạt động gần nhất");
         String fileName = "output.xlsx";
         Map<String, Integer> indexMap = new HashMap<>();
         indexMap.put("name", 1);
@@ -767,42 +684,41 @@ public class AnalyticServiceImpl implements AnalyticService {
         indexMap.put("totalTasks", 7);
         indexMap.put("totalMeetings", 8);
         indexMap.put("lastTimeActive", 9);
+        return getResourceResponseEntity(remainColumns, data, headers, fileName, indexMap);
+    }
+
+    @NotNull
+    static ResponseEntity<Resource> getResourceResponseEntity(List<String> remainColumns, List<List<String>> data, List<String> headers, String fileName, Map<String, Integer> indexMap) throws IOException {
         List<Integer> remainColumnIndexes = new ArrayList<>();
         remainColumnIndexes.add(0);
-        remainColumns.forEach(
-                remainColumn -> {
-                    if (indexMap.containsKey(remainColumn)) {
-                        remainColumnIndexes.add(indexMap.get(remainColumn));
-                    }
-                });
+        remainColumns.forEach(remainColumn -> {
+            if (indexMap.containsKey(remainColumn)) {
+                remainColumnIndexes.add(indexMap.get(remainColumn));
+            }
+        });
         File exportFile = FileUtils.generateExcel(headers, data, remainColumnIndexes, fileName);
         Resource resource = new FileSystemResource(exportFile.getAbsolutePath());
-        ResponseEntity<Resource> response =
-                ResponseEntity.ok()
-                        .header(
-                                HttpHeaders.CONTENT_DISPOSITION, "attachment;filename=" + resource.getFilename())
-                        .contentType(MediaType.parseMediaType("application/vnd.ms-excel"))
-                        .contentLength(resource.getFile().length())
-                        .body(resource);
-        return response;
+        return ResponseEntity.ok()
+                .header(
+                        HttpHeaders.CONTENT_DISPOSITION, "attachment;filename=" + resource.getFilename())
+                .contentType(MediaType.parseMediaType("application/vnd.ms-excel"))
+                .contentLength(resource.getFile().length())
+                .body(resource);
     }
 
     @Override
     public ResponseEntity<Resource> generateExportGroupsTable(
             String emailUser, List<String> remainColumns) throws IOException {
         List<GroupGeneralResponse> groups = getAllGroupGeneralAnalytic(emailUser);
-        ResponseEntity<Resource> response = generateExportGroupsTable(groups, remainColumns);
-        return response;
+        return generateExportGroupsTable(groups, remainColumns);
     }
 
     @Override
     public ResponseEntity<Resource> generateExportGroupsTableBySearchConditions(
             String emailUser, FindGroupGeneralAnalyticRequest request, List<String> remainColumns)
             throws IOException {
-        List<GroupGeneralResponse> groups =
-                getGroupGeneralAnalyticBySearchConditions(emailUser, request);
-        ResponseEntity<Resource> response = generateExportGroupsTable(groups, remainColumns);
-        return response;
+        List<GroupGeneralResponse> groups = getGroupGeneralAnalyticBySearchConditions(emailUser, request);
+        return generateExportGroupsTable(groups, remainColumns);
     }
 
 //    private List<GroupGeneralResponse> getGroupGeneralAnalyticBySearchConditions(
@@ -883,10 +799,10 @@ public class AnalyticServiceImpl implements AnalyticService {
     }
 
     @Override
-    public ApiResponseDto<Page<GroupGeneralResponse>> findGroupGeneralAnalytic(
+    public ApiResponseDto findGroupGeneralAnalytic(
             String emailUser, Pageable pageRequest, FindGroupGeneralAnalyticRequest request) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new ApiResponseDto(null, INVALID_PERMISSION, "Invalid permission");
+            return new ApiResponseDto(null, INVALID_PERMISSION, INVALID_PERMISSION_STRING);
         }
         List<GroupGeneralResponse> responses =
                 getGroupGeneralAnalyticBySearchConditions(emailUser, request);
@@ -956,8 +872,7 @@ public class AnalyticServiceImpl implements AnalyticService {
 //        return members;
 //    }
     // TODO: Make sure this function works correctly
-    private List<GroupAnalyticResponse.Member> getUsersAnalyticBySearchConditions(
-            String emailUser, String groupId, FindUserAnalyticRequest request) {
+    private List<GroupAnalyticResponse.Member> getUsersAnalyticBySearchConditions(String emailUser, String groupId, FindUserAnalyticRequest request) {
         String name = request.getName();
         String email = request.getEmail();
         FindUserAnalyticRequest.Role role = request.getRole();
@@ -1018,15 +933,13 @@ public class AnalyticServiceImpl implements AnalyticService {
     }
 
     @Override
-    public ApiResponseDto<List<GroupAnalyticResponse.Member>> findUserAnalytic(
-            String emailUser, String groupId, FindUserAnalyticRequest request) {
+    public ApiResponseDto<List<GroupAnalyticResponse.Member>> findUserAnalytic(String emailUser, String groupId, FindUserAnalyticRequest request) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new ApiResponseDto(null, INVALID_PERMISSION, "Invalid permission");
+            return new ApiResponseDto<>(null, INVALID_PERMISSION, INVALID_PERMISSION_STRING);
         }
 
-        List<GroupAnalyticResponse.Member> members =
-                getUsersAnalyticBySearchConditions(emailUser, groupId, request);
-        return new ApiResponseDto(members, SUCCESS, null);
+        List<GroupAnalyticResponse.Member> members = getUsersAnalyticBySearchConditions(emailUser, groupId, request);
+        return new ApiResponseDto<>(members, SUCCESS, null);
     }
 
     private Map<String, Object> pagingResponse(Page<GroupGeneralResponse> groups) {
@@ -1042,11 +955,11 @@ public class AnalyticServiceImpl implements AnalyticService {
     public ApiResponseDto<Map<String, String>> importData(
             String emailUser, MultipartFile file, String type) throws IOException {
         if (!permissionService.isAdmin(emailUser)) {
-            return new ApiResponseDto(null, INVALID_PERMISSION, "Invalid permission");
+            return new ApiResponseDto<>(null, INVALID_PERMISSION, INVALID_PERMISSION_STRING);
         }
         Map<String, String> data = parseExcelTwoColumns(file);
         ApiResponseDto<Map<String, String>> isValidData = validateData(data, type);
-        if (isValidData.getReturnCode() != SUCCESS) {
+        if (!Objects.equals(isValidData.getReturnCode(), SUCCESS)) {
             return isValidData;
         }
         for (Map.Entry<String, String> entry : data.entrySet()) {
@@ -1063,11 +976,13 @@ public class AnalyticServiceImpl implements AnalyticService {
                 case "STUDYING_POINT":
                     user.setStudyingPoint(Double.parseDouble(value));
                     break;
+                default:
+                    break;
             }
             userRepository.save(user);
         }
 
-        return new ApiResponseDto(data, SUCCESS, "");
+        return new ApiResponseDto<>(data, SUCCESS, "");
     }
 
     private ApiResponseDto<Map<String, String>> validateData(Map<String, String> data, String type) {
@@ -1083,30 +998,32 @@ public class AnalyticServiceImpl implements AnalyticService {
 
             switch (type) {
                 case "TRAINING_POINT":
-                    if (!isValidTrainingPoint(value)) {
+                    if (Boolean.FALSE.equals(isValidTrainingPoint(value))) {
                         invalidValues.put(email, value);
                     }
                     break;
                 case "HAS_ENGLISH_CERT":
-                    if (!isValidHasEnglishCert(value)) {
+                    if (Boolean.FALSE.equals(isValidHasEnglishCert(value))) {
                         invalidValues.put(email, value);
                     }
                     break;
                 case "STUDYING_POINT":
-                    if (!isValidStudyingPoint(value)) {
+                    if (Boolean.FALSE.equals(isValidStudyingPoint(value))) {
                         invalidValues.put(email, value);
                     }
+                    break;
+                default:
                     break;
             }
         }
         if (!notFoundsUser.isEmpty()) {
-            return new ApiResponseDto(notFoundsUser, NOT_FOUND_USER, "Not found users");
+            return new ApiResponseDto<>(notFoundsUser, NOT_FOUND_USER, "Not found users");
         }
         if (!invalidValues.isEmpty()) {
-            return new ApiResponseDto(invalidValues, INVALID_VALUE, "Invalid values");
+            return new ApiResponseDto<>(invalidValues, INVALID_VALUE, "Invalid values");
         }
 
-        return new ApiResponseDto(null, SUCCESS, "");
+        return new ApiResponseDto<>(null, SUCCESS, "");
     }
 
     private Boolean isValidTrainingPoint(String value) {
@@ -1119,12 +1036,11 @@ public class AnalyticServiceImpl implements AnalyticService {
     }
 
     private Boolean isValidStudyingPoint(String value) {
-        Double studyingPoint = Double.parseDouble(value);
+        double studyingPoint = Double.parseDouble(value);
         return studyingPoint <= 10 && studyingPoint >= 0;
     }
 
-    private ApiResponseDto<List<ImportGeneralInformationResponse>> validateMultipleData(
-            Map<String, List<String>> data) {
+    private ApiResponseDto<List<ImportGeneralInformationResponse>> validateMultipleData(Map<String, List<String>> data) {
         List<ImportGeneralInformationResponse> invalidValues = new ArrayList<>();
         List<ImportGeneralInformationResponse> notFoundsUser = new ArrayList<>();
 
@@ -1136,19 +1052,19 @@ public class AnalyticServiceImpl implements AnalyticService {
 
             boolean isNotFoundUser = false;
             generalInformation.setEmail(email);
-            if (!user.isPresent()) {
+            if (user.isEmpty()) {
                 isNotFoundUser = true;
             }
             boolean isInvalid = false;
-            if (!isValidTrainingPoint(value.get(0))) {
-                generalInformation.setTrainingPoint(value.get(0));
+            if (Boolean.FALSE.equals(isValidTrainingPoint(value.get(0)))) {
+                generalInformation.setTrainingPoint(value.getFirst());
                 isInvalid = true;
             }
-            if (!isValidHasEnglishCert(value.get(1))) {
+            if (Boolean.FALSE.equals(isValidHasEnglishCert(value.get(1)))) {
                 generalInformation.setHasEnglishCert(value.get(1));
                 isInvalid = true;
             }
-            if (!isValidStudyingPoint(value.get(2))) {
+            if (Boolean.FALSE.equals(isValidStudyingPoint(value.get(2)))) {
                 generalInformation.setStudyingPoint(value.get(2));
                 isInvalid = true;
             }
@@ -1161,24 +1077,22 @@ public class AnalyticServiceImpl implements AnalyticService {
         }
 
         if (!notFoundsUser.isEmpty()) {
-            return new ApiResponseDto(notFoundsUser, NOT_FOUND_USER, "Not found users");
+            return new ApiResponseDto<>(notFoundsUser, NOT_FOUND_USER, NOT_FOUND_USER_STRING);
         }
         if (!invalidValues.isEmpty()) {
-            return new ApiResponseDto(invalidValues, INVALID_VALUE, "Invalid values");
+            return new ApiResponseDto<>(invalidValues, INVALID_VALUE, INVALID_VALUE_STRING);
         }
-        return new ApiResponseDto(null, SUCCESS, "");
+        return new ApiResponseDto<>(null, SUCCESS, "");
     }
 
     @Override
-    public ApiResponseDto<List<ImportGeneralInformationResponse>> importMultipleData(
-            String emailUser, MultipartFile file) throws IOException {
+    public ApiResponseDto<List<ImportGeneralInformationResponse>> importMultipleData(String emailUser, MultipartFile file) throws IOException {
         if (!permissionService.isAdmin(emailUser)) {
-            return new ApiResponseDto(null, INVALID_PERMISSION, "Invalid permission");
+            return new ApiResponseDto<>(null, INVALID_PERMISSION, INVALID_PERMISSION_STRING);
         }
         Map<String, List<String>> data = parseExcelFourColumns(file);
-        ApiResponseDto<List<ImportGeneralInformationResponse>> isValidMultipleData =
-                validateMultipleData(data);
-        if (isValidMultipleData.getReturnCode() != SUCCESS) {
+        ApiResponseDto<List<ImportGeneralInformationResponse>> isValidMultipleData = validateMultipleData(data);
+        if (!Objects.equals(isValidMultipleData.getReturnCode(), SUCCESS)) {
             return isValidMultipleData;
         }
         List<ImportGeneralInformationResponse> dataResponse = new ArrayList<>();
@@ -1206,7 +1120,7 @@ public class AnalyticServiceImpl implements AnalyticService {
             }
         }
 
-        return new ApiResponseDto(dataResponse, SUCCESS, "");
+        return new ApiResponseDto<>(dataResponse, SUCCESS, "");
     }
 
     private Map<String, String> parseExcelTwoColumns(MultipartFile file) throws IOException {
@@ -1271,41 +1185,36 @@ public class AnalyticServiceImpl implements AnalyticService {
     }
 
     @Override
-    public ApiResponseDto<User> updateStudentInformation(
-            String emailUser, String userId, UpdateStudentInformationRequest request) {
+    public ApiResponseDto<User> updateStudentInformation(String emailUser, String userId, UpdateStudentInformationRequest request) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new ApiResponseDto(null, INVALID_PERMISSION, "Invalid permission");
+            return new ApiResponseDto<>(null, INVALID_PERMISSION, INVALID_PERMISSION_STRING);
         }
-        Optional<User> optionalUser = userRepository.findById(userId);
-        if (!optionalUser.isPresent()) {
-            return new ApiResponseDto(null, NOT_FOUND_USER, "Not found user");
+        var user = userRepository.findById(userId).orElse(null);
+        if (user == null) {
+            return new ApiResponseDto<>(null, NOT_FOUND_USER, "Not found user");
         }
-        User user = optionalUser.get();
-        if (!isValidStudyingPoint(request.getStudyingPoint().toString())
-                || !isValidTrainingPoint(request.getTrainingPoint().toString())) {
-            return new ApiResponseDto(null, INVALID_VALUE, "Invalid value");
+        if (!isValidStudyingPoint(request.getStudyingPoint().toString()) || !isValidTrainingPoint(request.getTrainingPoint().toString())) {
+            return new ApiResponseDto<>(null, INVALID_VALUE, "Invalid value");
         }
         user.update(request);
         userRepository.save(user);
-        return new ApiResponseDto(user, SUCCESS, "");
+        return new ApiResponseDto<>(user, SUCCESS, "");
     }
 
     @Override
     public String exportGroupReport(String exporterEmail, String groupId, WebContext context) {
-        Optional<Group> groupWrapper = groupRepository.findById(groupId);
-        if (!groupWrapper.isPresent()) {
+        var group = groupRepository.findById(groupId).orElse(null);
+        if (group == null) {
             return null;
         }
         if (!permissionService.isAdmin(exporterEmail)) {
             return null;
         }
-        Group group = groupWrapper.get();
         GroupAnalyticResponse data = getGeneralGroupAnalytic(group);
-        Map statusMap = Group.getStatusMap();
-        String status = (String) statusMap.get(group.getStatus());
+        Map<GroupStatus, String> statusMap = Group.getStatusMap();
+        String status = statusMap.get(group.getStatus());
         SimpleDateFormat dateFormat = new SimpleDateFormat("dd/MM/yyyy");
-        String groupTime =
-                dateFormat.format(group.getTimeStart()) + " - " + dateFormat.format((group.getTimeEnd()));
+        String groupTime = dateFormat.format(group.getTimeStart()) + " - " + dateFormat.format((group.getTimeEnd()));
         context.setVariable("GROUP_NAME", data.getName());
         context.setVariable("GROUP_CATEGORY", data.getCategory());
         context.setVariable("GROUP_STATUS", status);
@@ -1328,14 +1237,12 @@ public class AnalyticServiceImpl implements AnalyticService {
     }
 
     @Override
-    public byte[] getGroupLog(
-            String exporterEmail, String groupId, List<AnalyticAttribute> attributes) throws IOException {
-        if (attributes.size() == 0) {
+    public byte[] getGroupLog(String exporterEmail, String groupId, List<AnalyticAttribute> attributes) throws IOException {
+        if (attributes.isEmpty()) {
             return null;
         }
 
-        Optional<Group> groupWrapper = groupRepository.findById(groupId);
-        if (!groupWrapper.isPresent()) {
+        if (!groupRepository.existsById(groupId)) {
             return null;
         }
         if (!permissionService.isAdmin(exporterEmail)) {
@@ -1376,16 +1283,15 @@ public class AnalyticServiceImpl implements AnalyticService {
 
     private void addMeetingsData(Sheet sheet, List<MeetingResponse> meetings) {
         Row headerRow = sheet.createRow(0);
-        List<String> headers =
-                Arrays.asList(
-                        "ID",
-                        "Tiêu đề",
-                        "Mô tả",
-                        "Thời gian bắt đầu",
-                        "Thời gian kết thúc",
-                        "Địa điểm",
-                        "Người tạo",
-                        "Lịch sử cuộc hẹn");
+        List<String> headers = Arrays.asList(
+                "ID",
+                "Tiêu đề",
+                "Mô tả",
+                "Thời gian bắt đầu",
+                "Thời gian kết thúc",
+                "Địa điểm",
+                "Người tạo",
+                "Lịch sử cuộc hẹn");
         setHeaders(headerRow, headers);
 
         int rowNum = 1;
